# Ejercicios-de-pogramacion

./: CALCULARNATURALES.cpp  CIEN.cpp  CMakeLists.txt  DOSAL20.cpp  Ejercicio2.cpp  Ejercicio2.h  FACTORIAL.cpp  FINOBACCI.cpp  FOR10.cpp  FOR3.cpp  FOR5.cpp  FOR6.cpp  FOR7.cpp  FOR8.cpp  FOR9.cpp  MEDIA.cpp  MULTIPLOS.cpp  NACIMIENTO.cpp  NATURALES.cpp  NOTAS.cpp  NumeroMayor.cpp  ORDEN.cpp  PARES.cpp  PRECIOS.cpp  PRIMO.cpp  TABLASDEL10.cpp  VOCAL.cpp  WHILE3.cpp  While2.cpp  YEAR.cpp  ZERO.cpp  main.cpp
