cmake_minimum_required(VERSION 3.30)
project(Ejercicios_de_pogramacion)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ejercicios_de_pogramacion main.cpp
        Ejercicio2.cpp
        NumeroMayor.cpp
        YEAR.cpp
        VOCAL.cpp
        PRIMO.cpp
        NACIMIENTO.cpp
        MULTIPLOS.cpp
        NOTAS.cpp
        PRECIOS.cpp
        ORDEN.cpp
        While2.cpp
        WHILE3.cpp
        FINOBACCI.cpp
        CIEN.cpp
        PARES.cpp
        MEDIA.cpp
        ZERO.cpp
        NATURALES.cpp
        CALCULARNATURALES.cpp
        DOSAL20.cpp
        TABLASDEL10.cpp
        FOR3.cpp
)
add_executable(Ejercicio2 Ejercicio2.cpp)
add_executable(main.cpp main.cpp)
add_executable(NumeroMayor NumeroMayor.cpp)
add_executable(YEAR YEAR.cpp)
add_executable(VOCAL VOCAL.cpp)
add_executable(PRIMO PRIMO.cpp)
add_executable(NACIMIENTO NACIMIENTO.cpp)
add_executable(MULTIPLOS MULTIPLOS.cpp)
add_executable(NOTAS NOTAS.cpp)
add_executable(PRECIOS PRECIOS.cpp)
add_executable(ORDEN ORDEN.cpp)
add_executable(While2 While2.cpp)
add_executable(WHILE3 WHILE3.cpp)
add_executable(FINOBACCI FINOBACCI.cpp)
add_executable(CIEN CIEN.cpp)
add_executable(PARES PARES.cpp)
add_executable(MEDIA MEDIA.cpp)
add_executable(ZERO ZERO.cpp)
add_executable(NATURALES NATURALES.cpp)
add_executable(CALCULARNATURALES CALCULARNATURALES.cpp)
add_executable(DOSAL20 DOSAL20.cpp)
add_executable(TABLASDEL10 TABLASDEL10.cpp)
add_executable(FOR3 FOR3.cpp)
